--- a/index.html
+++ b/index.html
@@ -76,6 +76,30 @@
     <!----------SECTION 2------------>
     <!------------------------------->
     <!-- TODO: Copy and paste the HTML from Section 1 and update the text and image class -->
+    <!--Text section-->
+    <div class="text-section">
+      <h2>
+        <!-- TODO: Update the heading with your own -->
+
+        Header
+      </h2>
+
+      <p>
+        <!-- TODO: Update the text with your own -->
+
+        This is kitty ipsum. It's just dummy text. So meowzer i like to spend my
+        days sleeping.
+      </p>
+
+      <!-- OPTIONAL TODO: If you need to attribute the image in a section, add it the text section -->
+
+      <p class="attributions">
+        Image taken from <a href="https://girlswhocode.com/">this website</a>.
+      </p>
+    </div>
+
+    <!--Image 1-->
+    <div class="image-t"></div>
 
     <!------------------------------->
     <!----------SECTION 3------------>
