🎫🗃 Checkpoint ./style.css:19034959/259

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     </div>
 
     <!--Image 1-->
-    <div class="image-t"></div>
+    <div class="image-two"></div>
 
     <!------------------------------->
     <!----------SECTION 3------------>
