🏀😀 Checkpoint ./index.html:19034959/238 ./style.css:19034959/14

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
       <div class="flex-container">
         <div class="heading-home">
           <!-- TODO: Update the heading with the title of your website -->
-          YOUR TITLE HERE 
+          PROTECT VOTING RIGHTS 
         </div>
 
         <div class="intro-text">
           <!-- TODO: Update the placeholder introduction text with your own intro text -->
 
-          Cat ipsum dolor sit amet, in the plant pot or nyan fluffness ahh cucumber! 
+          Voter suppression is rampant throughout the US. We must take action against this crisis before the 2020 election.
         </div>
       </div>
     </div>
