🏭🚘 Checkpoint ./index.html:19034959/622 ./style.css:19034959/113

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="intro-text">
           <!-- TODO: Update the placeholder introduction text with your own intro text -->
 
-          Voter suppression is rampant throughout the US. We must take action against this crisis before the 2020 election.
+          Voter suppression is rampant throughout the US. We must take action to stop this crisis so millions of Americans are no longer deprived of their right to vote.
         </div>
       </div>
     </div>
@@ -52,14 +52,14 @@
       <h2>
         <!-- TODO: Update the heading with your own -->
 
-        Header
+        Shelby County v. Holder
       </h2>
 
       <p>
         <!-- TODO: Update the text with your own -->
 
-        This is kitty ipsum. It's just dummy text. So meowzer i like to spend my
-        days sleeping.
+        In 2013, the Supreme Court voted 5-4 to invalidate the heart of the Voting Rights Act in Shelby County v. Holder. 
+        This decision allowed several states to change their election laws without advance federal approval....
       </p>
 
       <!-- OPTIONAL TODO: If you need to attribute the image in a section, add it the text section -->
