😇🛳 Checkpoint ./take-action.html:19034959/200 ./script.js:19034959/372

--- a/take-action.html
+++ b/take-action.html
@@ -53,6 +53,11 @@
         <p id = "instructions">
           Here are some concrete ways you can fight voter supression. Once you have completed an item, check it off the list!
         </p>
+        <ul id = "my-list">
+          <li class = "action-li">Step 1</li>
+          <li class = "action-li">Step 2</li>
+          <li class = "action-li">Step 3</li>
+        </ul>
       </div>
       
     </div>
