👝🎐 Checkpoint ./script.js:19034959/44 ./take-action.css:19034959/16 ./style.css:19034959/182 ./index.html:19034959/274

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- TODO: Update the heading with the name of your website -->
     <title>End Voter Suppression</title>
 
     <meta charset="utf-8" />
@@ -32,7 +31,6 @@
     <div class="main-message">
       <div class="flex-container">
         <div class="heading-home">
-          <!-- TODO: Update the heading with the title of your website -->
           PROTECT VOTING RIGHTS 
         </div>
 
@@ -50,8 +48,6 @@
     <!--Text section-->
     <div class="text-section">
       <h2>
-        <!-- TODO: Update the heading with your own -->
-
         Shelby County v. Holder
       </h2>
 
@@ -65,7 +61,7 @@
       <!-- OPTIONAL TODO: If you need to attribute the image in a section, add it the text section -->
 
       <p class="attributions">
-        Image taken from <a href="https://girlswhocode.com/">this website</a>.
+        Image taken from <a href="https://www.usnews.com" target = "blank">this website</a>.
       </p>
     </div>
 
