🍏🚘 Checkpoint ./index.html:19034959/681

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- import the webpage's stylesheets -->
+    <!-- stylesheets -->
     <link rel="stylesheet" href="/style.css" />
     <link rel="stylesheet" href="/take-action.css" />
 
-    <!-- import the webpage's javascript file -->
+    <!-- javascript file -->
     <script src="/script.js" defer></script>
 
-    <!-- TODO: Add any links to Google font families here -->
+    <!-- TODO: add fonts -->
   </head>
   <body>
     <nav>
@@ -57,9 +57,6 @@
         In 2013, the Supreme Court voted 5-4 to invalidate the heart of the Voting Rights Act in Shelby County v. Holder. 
         This decision allowed several states to change their election laws without advance federal approval....
       </p>
-
-      <!-- OPTIONAL TODO: If you need to attribute the image in a section, add it the text section -->
-
       <p class="attributions">
         Image taken from <a href="https://www.usnews.com" target = "blank">this website</a>.
       </p>
@@ -71,26 +68,21 @@
     <!------------------------------->
     <!----------SECTION 2------------>
     <!------------------------------->
-    <!-- TODO: Copy and paste the HTML from Section 1 and update the text and image class -->
     <!--Text section-->
     <div class="text-section">
       <h2>
         <!-- TODO: Update the heading with your own -->
 
-        Header
+        Restrictive Voting Measures
       </h2>
 
       <p>
         <!-- TODO: Update the text with your own -->
 
-        This is kitty ipsum. It's just dummy text. So meowzer i like to spend my
-        days sleeping.
+        Photo ID laws, Georgia governors race, etc.
       </p>
-
-      <!-- OPTIONAL TODO: If you need to attribute the image in a section, add it the text section -->
-
       <p class="attributions">
-        Image taken from <a href="https://girlswhocode.com/">this website</a>.
+        Image taken from <a href="https://www.3newsnow.com/" target = "blank">this website</a>.
       </p>
     </div>
 
