--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <!-- TODO: add fonts -->
   </head>
   <body>
+    <!-- navigation bar -->
     <nav>
       <ul class="nav-bar">
         <li class="nav"><a href="take-action.html">Take Action</a></li>
@@ -24,36 +25,25 @@
       </ul>
     </nav>
 
-    <!------------------------------->
-    <!---------TOP SECTION----------->
-    <!------------------------------->
+    <!---------HEADING----------->
     <!--Top section with title and description-->
     <div class="main-message">
       <div class="flex-container">
         <div class="heading-home">
           PROTECT VOTING RIGHTS 
         </div>
-
         <div class="intro-text">
-          <!-- TODO: Update the placeholder introduction text with your own intro text -->
-
           Voter suppression is rampant throughout the US. We must take action to stop this crisis so millions of Americans are no longer deprived of their right to vote.
         </div>
       </div>
     </div>
 
-    <!------------------------------->
-    <!----------SECTION 1------------>
-    <!------------------------------->
+    <!----------SHELBY COUNTY------------>
     <!--Text section-->
     <div class="text-section">
-      <h2>
-        Shelby County v. Holder
-      </h2>
-
+      <h2>Shelby County v. Holder</h2>
       <p>
-        <!-- TODO: Update the text with your own -->
-
+        <!-- TODO: update text -->
         In 2013, the Supreme Court voted 5-4 to invalidate the heart of the Voting Rights Act in Shelby County v. Holder. 
         This decision allowed several states to change their election laws without advance federal approval....
       </p>
@@ -62,23 +52,15 @@
       </p>
     </div>
 
-    <!--Image 1-->
+    <!--2014 protest image-->
     <div class="image-one"></div>
 
-    <!------------------------------->
-    <!----------SECTION 2------------>
-    <!------------------------------->
+    <!----------RESTRICTIVE MEASURES------------>
     <!--Text section-->
     <div class="text-section">
-      <h2>
-        <!-- TODO: Update the heading with your own -->
-
-        Restrictive Voting Measures
-      </h2>
-
+      <h2>Restrictive Voting Measures</h2>
       <p>
-        <!-- TODO: Update the text with your own -->
-
+        <!-- TODO: update text -->
         Photo ID laws, Georgia governors race, etc.
       </p>
       <p class="attributions">
@@ -86,23 +68,33 @@
       </p>
     </div>
 
-    <!--Image 1-->
+    <!--polls image-->
     <div class="image-two"></div>
 
-    <!------------------------------->
-    <!----------SECTION 3------------>
-    <!------------------------------->
-    <!-- TODO: Copy and paste the HTML from Section 1 and update the text and image class -->
+  <!----------IMPORTANCE------------>
+    <!--Text section-->
+    <div class="text-section">
+      <h2>Why does this matter?</h2>
+      <p>
+        <!-- TODO: update text -->
+        The right to vote is essential to our democracy...
+      </p>
+      <p class="attributions">
+        Image taken from <a href="https://www.3newsnow.com/" target = "blank">this website</a>.
+      </p>
+    </div>
 
-    <!------------------------------->
-    <!--Copy and paste if you have more than three sections-->
-    <!----------SECTION X------------>
-    <!------------------------------->
-    <!-- TODO: Copy and paste the HTML from Section 1 and update the text and image class -->
-
-    <!------------------------------->
-    <!---------ABOUT SECTION--------->
-    <!------------------------------->
+    <!---------ABOUT--------->
     <!--Text section only-->
+    <div class="text-section">
+      <h2>About Me</h2>
+      <p>
+        <!-- TODO: update text -->
+        I am a rising junior at the Brearley School in NYC...
+      </p>
+      <p class="attributions">
+        Image taken from <a href="https://www.google.com/" target = "blank">this website</a>.
+      </p>
+    </div>
   </body>
 </html>
