🍓🌶 Checkpoint ./.glitch-assets:19034959/764 ./style.css:19034959/792 ./index.html:19034959/135 ./script.js:19034959/479

--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
         Image taken from <a href="https://www.3newsnow.com/" target = "blank">this website</a>.
       </p>
     </div>
+    
+    <!--photo id image-->
+    <div class="image-three"></div>
 
     <!---------ABOUT--------->
     <!--Text section only-->
@@ -93,7 +96,7 @@
         I am a rising junior at the Brearley School in NYC...
       </p>
       <p class="attributions">
-        Image taken from <a href="https://www.google.com/" target = "blank">this website</a>.
+        Image taken from <a href="https://www.narf.org/" target = "blank">this website</a>.
       </p>
     </div>
   </body>
