⛩🍓 Checkpoint ./style.css:19034959/1737 ./index.html:19034959/88

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 
     <!----------SHELBY COUNTY------------>
     <!--Text section-->
+    <div class = "info-section">
     <div class="text-section">
       <h2>Shelby County v. Holder</h2>
       <p>
@@ -51,6 +52,7 @@
         Image taken from <a href="https://www.usnews.com" target = "blank">this website</a>.
       </p>
     </div>
+      
 
     <!--2014 protest image-->
     <div class="image-one"></div>
