🐀😂 Checkpoint ./index.html:19034959/20 ./style.css:19034959/2250 ./take-action.css:19034959/257

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         Image taken from <a href="https://www.usnews.com" target = "blank">this website</a>.
       </p>
     </div>
-      
+    </div>
 
     <!--2014 protest image-->
     <div class="image-one"></div>
