💒🐯 Checkpoint ./take-action.css:19034959/1767 ./take-action.html:19034959/14

--- a/take-action.html
+++ b/take-action.html
@@ -38,7 +38,7 @@
     <!--------FLEX CONTAINER--------->
     <!------------------------------->
     <!-- TODO: Create a flex container with the class "flex-container-action" to hold the description of your action and your check list -->
-    <div class = "flex-container-action">
+    <div class = "flex-container-action heading-image">
       <div class = "action-info-container">
         <h2>How can you combat voter suppression?</h2>
         <p>
