--- a/take-action.html
+++ b/take-action.html
@@ -25,6 +25,7 @@
   <body>
     <nav>
       <ul class="nav-bar">
+        <li class="nav"><a href="resources.html">Resources</a></li>
         <li class="nav"><a href="take-action.html">Take Action</a></li>
         <li class="nav"><a href="index.html">Home</a></li>
       </ul>
