--- a/index.html
+++ b/index.html
@@ -39,13 +39,16 @@
       </div>
     </div>
 
-    <!----------SHELBY COUNTY------------>
+    <!----------VOTING RIGHTS ACT------------>
     <!--Text section-->
     <div class = "info-section">
     <div class="text-section">
-      <h2>Shelby County v. Holder</h2>
+      <h2>The Voting Rights Act of 1965</h2>
       <p>
         <!-- TODO: update text -->
+        The Voting Rights Act, a landmark piece of federal civil rights legislation, was signed into law by Lyndon B. Johnson in 1965 
+        to ensure that state and local governments do not imposing discriminatory voting policies. The Act secured the right to vote
+        for racial minorities throughout the US, especially in the South. 
         In 2013, the Supreme Court voted 5-4 to invalidate the heart of the Voting Rights Act in Shelby County v. Holder. 
         This decision allowed several states to change their election laws without advance federal approval....
       </p>
