--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <p>
         <!-- TODO: update text -->
         The Voting Rights Act, a landmark piece of federal civil rights legislation, was signed into law by Lyndon B. Johnson in 1965 
-        to ensure that state and local governments do not imposing discriminatory voting policies. The Act secured the right to vote
+        to ensure that state and local governments do not impose discriminatory voting policies. The Act secured the right to vote
         for racial minorities throughout the US, especially in the South. 
         In 2013, the Supreme Court voted 5-4 to invalidate the heart of the Voting Rights Act in Shelby County v. Holder. 
         This decision allowed several states to change their election laws without advance federal approval....
