🧀🚖 Checkpoint ./index.html:19034959/695

--- a/index.html
+++ b/index.html
@@ -48,8 +48,11 @@
         <!-- TODO: update text -->
         The Voting Rights Act, a landmark piece of federal civil rights legislation, was signed into law by Lyndon B. Johnson in 1965 
         to ensure that state and local governments do not impose discriminatory voting policies. The Act secured the right to vote
-        for racial minorities throughout the US, especially in the South. 
-        In 2013, the Supreme Court voted 5-4 to invalidate the heart of the Voting Rights Act in Shelby County v. Holder. 
+        for racial minorities throughout the US, especially in the South. It contains multiple ways to regulate elections, including
+        provisions that outlaw literacy tests and other methods that governments had historically used to disenfranchise minorities. 
+        Section 4(b) contains a "coverage formula" that determines which state and local governments are subject to special provisions
+        in Section 5, such as required federal approval, or "preclearance", before these districts can change their election laws. 
+        In 2013, the Supreme Court voted 5-4 to invalidate Section 4 of the Voting Rights Act in Shelby County v. Holder. 
         This decision allowed several states to change their election laws without advance federal approval....
       </p>
       <p class="attributions">
