🚿👮 Checkpoint ./index.html:19034959/703 ./style.css:19034959/85

--- a/index.html
+++ b/index.html
@@ -45,15 +45,19 @@
     <div class="text-section">
       <h2>The Voting Rights Act of 1965</h2>
       <p>
-        <!-- TODO: update text -->
         The Voting Rights Act, a landmark piece of federal civil rights legislation, was signed into law by Lyndon B. Johnson in 1965 
         to ensure that state and local governments do not impose discriminatory voting policies. The Act secured the right to vote
         for racial minorities throughout the US, especially in the South. It contains multiple ways to regulate elections, including
         provisions that outlaw literacy tests and other methods that governments had historically used to disenfranchise minorities. 
-        Section 4(b) contains a "coverage formula" that determines which state and local governments are subject to special provisions
-        in Section 5, such as required federal approval, or "preclearance", before these districts can change their election laws. 
-        In 2013, the Supreme Court voted 5-4 to invalidate Section 4 of the Voting Rights Act in Shelby County v. Holder. 
-        This decision allowed several states to change their election laws without advance federal approval....
+        Section 4(b) contains a "coverage formula" that determines which state and local governments are subject to the special provisions
+        in Section 5, which include requiring federal approval, or "preclearance", before changing their election laws. 
+        The formula covered districts which had a history of racially discriminatory voting policies, and mainly targeted the Deep South.
+        <br>
+        <br>
+        </p> 
+      <p>
+        In 2013, the Supreme Court voted 5-4 to invalidate Section 4 of the Voting Rights Act in Shelby County v. Holder. This decision
+        made the provisions in Section 5 unenforceable and allowed several states to impose restrictive election laws without advance federal approval.
       </p>
       <p class="attributions">
         Image taken from <a href="https://www.usnews.com" target = "blank">this website</a>.
