🎱👩 Checkpoint ./index.html:19034959/265

--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
       <h2>Restrictive Voting Measures</h2>
       <p>
         <!-- TODO: update text -->
-        Photo ID laws, Georgia governors race, etc.
+        Photo ID laws, voter registration restrictions, voter purges, lack of polling places, felony disenfrachisement, 
+        and gerrymandering are among the many ways that legislators restrict voting. 
       </p>
       <p class="attributions">
         Image taken from <a href="https://www.3newsnow.com/" target = "blank">this website</a>.
