--- a/resources.html
+++ b/resources.html
@@ -13,6 +13,9 @@
 
     <!-- javascript file -->
     <script src="/script.js" defer></script>
+    <script src="/map.js" defer></script>
+    <script type="text/javascript" src="http://yoursite.com/mapdata.js"></script>		
+    <script  type="text/javascript" src="http://yoursite.com/usmap.js"></script>
 
     <!-- TODO: add fonts -->
   </head>
