--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <p>
         <!-- TODO: update text -->
         Photo ID laws, voter registration restrictions, voter purges, lack of polling places, felony disenfrachisement, 
-        and gerrymandering are among the many ways that legislators restrict voting. 
+        and gerrymandering are among the many ways that politicians restrict voting. 
       </p>
       <p class="attributions">
         Image taken from <a href="https://www.3newsnow.com/" target = "blank">this website</a>.
