🎤🚍 Checkpoint ./index.html:19034959/258

--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
       <p>
         <!-- TODO: update text -->
         Photo ID laws, voter registration restrictions, voter purges, lack of polling places, felony disenfrachisement, 
-        and gerrymandering are among the many ways that politicians restrict voting. 
+        and gerrymandering are among the many ways that politicians restrict voting. These measures disporportionally target
+        people of color, students, the elderly, and people with disabilities. 
       </p>
       <p class="attributions">
         Image taken from <a href="https://www.3newsnow.com/" target = "blank">this website</a>.
@@ -104,10 +105,10 @@
     <!---------ABOUT--------->
     <!--Text section only-->
     <div class="text-section">
-      <h2>About Me</h2>
+      <h2>About</h2>
       <p>
         <!-- TODO: update text -->
-        I am a rising junior at the Brearley School in NYC...
+        I wanted to create this website to educate people about the 
       </p>
       <p class="attributions">
         Image taken from <a href="https://www.narf.org/" target = "blank">this website</a>.
