🍉🎄 Checkpoint ./index.html:19034959/139

--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
       <h2>About</h2>
       <p>
         <!-- TODO: update text -->
-        I wanted to create this website to educate people about the 
+        I wanted to create this website to raise awareness about the perils of voter suppression, and to encourage people
+        to take action ahead of the 2020 election. 
       </p>
       <p class="attributions">
         Image taken from <a href="https://www.narf.org/" target = "blank">this website</a>.
