😬❄️ Checkpoint ./index.html:19034959/942

--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@
         Photo ID laws, voter registration restrictions, voter purges, lack of polling places, felony disenfrachisement, 
         and gerrymandering are among the many ways that politicians restrict voting. These measures disporportionally target
         people of color, students, the elderly, and people with disabilities. 
+        <br>
+      </p>
+      <p>
+        Thirty-six states have photo ID laws. According to the US Government Accountability Office (GAO), 
       </p>
       <p class="attributions">
         Image taken from <a href="https://www.3newsnow.com/" target = "blank">this website</a>.
@@ -107,9 +111,10 @@
     <div class="text-section">
       <h2>About</h2>
       <p>
-        <!-- TODO: update text -->
+        I am a rising junior at the Brearley School in NYC, and am passionate about history, public health, and social justice. 
         I wanted to create this website to raise awareness about the perils of voter suppression, and to encourage people
-        to take action ahead of the 2020 election. 
+        to take action ahead of the 2020 election. I especially hope to reach people in my generation and inspire them to vote, 
+        to possibly increase turnout among this demographic. 
       </p>
       <p class="attributions">
         Image taken from <a href="https://www.narf.org/" target = "blank">this website</a>.
