👴💓 Checkpoint ./index.html:19034959/1122

--- a/index.html
+++ b/index.html
@@ -80,10 +80,17 @@
         <br>
       </p>
       <p>
-        Thirty-six states have photo ID laws. According to the US Government Accountability Office (GAO), 
+        Thirty-six states have photo ID laws. According to the US Government Accountability Office (GAO), voter ID laws reduce
+        turnout by approximately 2-3 percent, which can translate to tens of thousands of votes lost in a single state. Over 21 million
+        citizens lack government-issued photo IDs, as they are not always accessible. IDs can be costly or come with related expenses, and
+        are often inconvenient to obtain for people living in rural areas. Minority voters disproportionately lack ID. Nationally, up to 
+        25% of African-American citizens of voting age lack government-issued photo ID, compared to only 8% of whites. As in-person
+        voter fraud is extremely rare, these laws serve no purpose other than targeting marginalized groups and reducing voter turnout. 
       </p>
       <p class="attributions">
         Image taken from <a href="https://www.3newsnow.com/" target = "blank">this website</a>.
+        <br>
+        Information adapted from the <a href = "https://www.aclu.org/news/civil-liberties/block-the-vote-voter-suppression-in-2020/" target = "blank">ACLU</a>.
       </p>
     </div>
 
