🍢🌻 Checkpoint ./index.html:19034959/289

--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
       <h2>Why does this matter?</h2>
       <p>
         <!-- TODO: update text -->
-        The right to vote is essential to our democracy...
+        Equal access to the right to vote is essential to our democracy. Voting can affect change across a broad spectrum of issues,
+        and one's right to vote is extremely important. 
       </p>
       <p class="attributions">
         Image taken from <a href="https://www.3newsnow.com/" target = "blank">this website</a>.
