--- a/index.html
+++ b/index.html
@@ -89,9 +89,7 @@
       </p>
       <p class="attributions">
         Image taken from <a href="https://www.3newsnow.com/" target = "blank">this website</a>.
-        <br>
-        Information adapted from the <a href = "https://www.aclu.org/news/civil-liberties/block-the-vote-voter-suppression-in-2020/" target = "blank">ACLU</a>.
-      </p>
+        </p>
     </div>
 
     <!--polls image-->
@@ -102,12 +100,16 @@
     <div class="text-section">
       <h2>Why does this matter?</h2>
       <p>
-        <!-- TODO: update text -->
         Equal access to the right to vote is essential to our democracy. Voting can affect change across a broad spectrum of issues,
-        and one's right to vote is extremely important. 
+        and is an extremely important form of political engagement. Depriving people of their right to vote negatively affects the entire country.
+        In addition, voter suppression indiscriminately targets marginalized groups. Nationally, 1 in 13 Black Americans cannot vote
+        due to disenfranchisement laws, and one third of voters with a disability report difficulty voting. We must stop voter suppression
+        to help the US become a better and more equal country.
       </p>
       <p class="attributions">
         Image taken from <a href="https://www.3newsnow.com/" target = "blank">this website</a>.
+        <br>
+        Statistics from the <a href = "https://www.aclu.org/news/civil-liberties/block-the-vote-voter-suppression-in-2020/" target = "blank">ACLU</a>.
       </p>
     </div>
     
