🎉🏀 Checkpoint ./take-action.css:19034959/72 ./take-action.html:19034959/687

--- a/take-action.html
+++ b/take-action.html
@@ -37,7 +37,7 @@
         <p>
           One of the most important things you can do is vote. Vote for politicians who will protect voting rights and stand against
           voter suppression. If you are not eligible to vote, you can help others register to vote, along with signing petitions
-          and calling your representatives to encourage them to pass voting rights legislation, such as the John Lewis Voting Rights Act.
+          and calling your representatives to encourage them to pass voting rights legislation, such as the John Lewis Voting Rights Advancement Act.
         </p>
         <img src = "https://cdn.glitch.com/22e5b1ff-d377-4a78-89a9-d25d41b0c854%2Fohio-supreme-court-voting-ruling.jpg?v=1596052902884">
       </div>
@@ -49,8 +49,10 @@
         </p>
         <ul id = "my-list">
           <li class = "action-li">Step 1: educate yourself about voter suppression across the US and in your state.</li>
-          <li class = "action-li">Step 2: <a href = "https://www.vote.org/register-to-vote/" target = "blank">REGISTER TO VOTE!</a> (or help someone else do so)</li>
-          <li class = "action-li">Step 3</li>
+          <li class = "action-li">Step 2: <a href = "https://vote.gov/" target = "blank" style = "color: white;">REGISTER TO VOTE!</a> (or help someone else do so)</li>
+          <li class = "action-li">Step 3: read and share <a href = "https://www.aclu.org/know-your-rights/voting-rights/" target = "blank" style = "color: white;">this</a> publication from the ACLU to help people know their rights</li>
+          <li class = "action-li">Step 4: sign <a href = "https://act.colorofchange.org/sign/Pass-VRAA/?sp_ref=660903488.176.209155.o.1.2&referring_akid=.8534579.MuPSTt&source=c2c" target </li>
+
         </ul>
       </div>
       
