📼⛹ Checkpoint ./take-action.html:19034959/867 ./style.css:19034959/97 ./take-action.css:19034959/57

--- a/take-action.html
+++ b/take-action.html
@@ -50,9 +50,9 @@
         <ul id = "my-list">
           <li class = "action-li">Step 1: educate yourself about voter suppression across the US and in your state.</li>
           <li class = "action-li">Step 2: <a href = "https://vote.gov/" target = "blank" style = "color: white;">REGISTER TO VOTE!</a> (or help someone else do so)</li>
-          <li class = "action-li">Step 3: read and share <a href = "https://www.aclu.org/know-your-rights/voting-rights/" target = "blank" style = "color: white;">this</a> publication from the ACLU to help people know their rights</li>
-          <li class = "action-li">Step 4: sign <a href = "https://act.colorofchange.org/sign/Pass-VRAA/?sp_ref=660903488.176.209155.o.1.2&referring_akid=.8534579.MuPSTt&source=c2c" target </li>
-
+          <li class = "action-li">Step 3: read and share <a href = "https://www.aclu.org/know-your-rights/voting-rights/" target = "blank" style = "color: white;">this publication</a> from the ACLU to help people know their rights</li>
+          <li class = "action-li">Step 4: sign <a href = "https://act.colorofchange.org/sign/Pass-VRAA/?sp_ref=660903488.176.209155.o.1.2&referring_akid=.8534579.MuPSTt&source=c2c" target = "blank" style = "color: white;">this petition</a> to urge Congress to pass the John Lewis Voting Rights Advancement Act. Or better yet, call/email your congressional representatives!</li>
+          <li class = "action-li">Step 5: if you have the means, support organizations that are fighting to protect voting rights (see resources page for examples)</li>
         </ul>
       </div>
       
