🍄🏫 Checkpoint ./take-action.html:19034959/1920 ./take-action.css:19034959/80

--- a/take-action.html
+++ b/take-action.html
@@ -37,7 +37,29 @@
         <p>
           One of the most important things you can do is vote. Vote for politicians who will protect voting rights and stand against
           voter suppression. If you are not eligible to vote, you can help others register to vote, along with signing petitions
-          and calling your representatives to encourage them to pass voting rights legislation, such as the John Lewis Voting Rights Advancement Act.
+          and calling your representatives to encourage them to pass voting rights legislation, such as the John R. Lewis Voting Rights Act.
+          <br>
+        </p>
+        <h3>Script for contacting your senators about the John R. Lewis Voting Rights Act: </h3>
+        <p>
+          Dear Senator [Last Name],
+          <br>
+        </p>
+        <p style = "text-indent: 50px;">
+          As you and fellow members of Congress mourn the passing of your House colleague, Representative John Lewis, I urge you to 
+          honor his memory with meaningful action by passing the John R. Lewis Voting Rights Act that passed as the Voting Rights 
+          Advancement Act in the House last year. Seven years ago, the Supreme Court gutted the original Voting Rights Act in its 
+          Shelby County v. Holder decision, paving the way for a resurgence of voter suppression laws and practices that disproportionately 
+          disenfranchise Black voters. We need the John R. Lewis Voting Rights Act to restore much-needed oversight of states when they 
+          repeatedly try to enact racist voting laws, and to ensure that no state can make significant changes to how they conduct elections 
+          without considering how those changes would impact voters of color. Please match the urgency of this moment in history and 
+          Representative Lewis’ lifelong commitment to civil rights by doing everything in your power to pass the John R. Lewis Voting Rights Act.
+          
+          <br>
+          <br>
+          Sincerely,
+          <br>
+          [Your Name]
         </p>
         <img src = "https://cdn.glitch.com/22e5b1ff-d377-4a78-89a9-d25d41b0c854%2Fohio-supreme-court-voting-ruling.jpg?v=1596052902884">
       </div>
@@ -51,7 +73,8 @@
           <li class = "action-li">Step 1: educate yourself about voter suppression across the US and in your state.</li>
           <li class = "action-li">Step 2: <a href = "https://vote.gov/" target = "blank" style = "color: white;">REGISTER TO VOTE!</a> (or help someone else do so)</li>
           <li class = "action-li">Step 3: read and share <a href = "https://www.aclu.org/know-your-rights/voting-rights/" target = "blank" style = "color: white;">this publication</a> from the ACLU to help people know their rights</li>
-          <li class = "action-li">Step 4: sign <a href = "https://act.colorofchange.org/sign/Pass-VRAA/?sp_ref=660903488.176.209155.o.1.2&referring_akid=.8534579.MuPSTt&source=c2c" target = "blank" style = "color: white;">this petition</a> to urge Congress to pass the John Lewis Voting Rights Advancement Act. Or better yet, call/email your congressional representatives!</li>
+          <li class = "action-li">Step 4: sign <a href = "https://act.colorofchange.org/sign/Pass-VRAA/?sp_ref=660903488.176.209155.o.1.2&referring_akid=.8534579.MuPSTt&source=c2c" target = "blank" style = "color: white;">this petition</a> to urge the Senate to pass the John Lewis R. Voting Rights Act (it was passed by the House in 2019). 
+            Or better yet, call/email your senators!</li>
           <li class = "action-li">Step 5: if you have the means, support organizations that are fighting to protect voting rights (see resources page for examples)</li>
         </ul>
       </div>
