📌🚓 Checkpoint ./index.html:19034959/45 ./take-action.html:19034959/187

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
       <p>
         The Voting Rights Act, a landmark piece of federal civil rights legislation, was signed into law by Lyndon B. Johnson in 1965 
         to ensure that state and local governments do not impose discriminatory voting policies. The Act secured the right to vote
-        for racial minorities throughout the US, especially in the South. It contains multiple ways to regulate elections, including
-        provisions that outlaw literacy tests and other methods that governments had historically used to disenfranchise minorities. 
+        for racial minorities throughout the US, especially in the South. It includes multiple ways to regulate elections, including
+        provisions that outlaw literacy tests and other methods that politicians have historically used to disenfranchise minorities. 
         Section 4(b) contains a "coverage formula" that determines which state and local governments are subject to the special provisions
         in Section 5, which include requiring federal approval, or "preclearance", before changing their election laws. 
         The formula covered districts which had a history of racially discriminatory voting policies, and mainly targeted the Deep South.
