--- a/take-action.html
+++ b/take-action.html
@@ -61,6 +61,9 @@
           <br>
           [Your Name]
         </p>
+        <p style = "font-size: 12px; text-align: right;">
+          Above script is from <a href = "https://colorofchange.org/" target = "blank">Color of Change</a>.
+        </p>
         <img src = "https://cdn.glitch.com/22e5b1ff-d377-4a78-89a9-d25d41b0c854%2Fohio-supreme-court-voting-ruling.jpg?v=1596052902884">
       </div>
       
