🏮😄 Checkpoint ./take-action.html:19034959/155 ./index.html:19034959/303 ./resources.html:19034959/223

--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
       </p>
       <p class="attributions">
         Image taken from <a href="https://www.3newsnow.com/" target = "blank">this website</a>.
+        <br>
+        Information from the <a href = "https://www.aclu.org/news/civil-liberties/block-the-vote-voter-suppression-in-2020/" target = "blank">ACLU</a> and the 
+        <a href = "https://www.brennancenter.org/" target = "blank">Brennan Center</a>.
         </p>
     </div>
 
