--- a/take-action.html
+++ b/take-action.html
@@ -77,7 +77,7 @@
           <li class = "action-li">Step 2: <a href = "https://vote.gov/" target = "blank" style = "color: white;">REGISTER TO VOTE!</a> (or help someone else do so)</li>
           <li class = "action-li">Step 3: read and share <a href = "https://www.aclu.org/know-your-rights/voting-rights/" target = "blank" style = "color: white;">this publication</a> from the ACLU to help people know their rights</li>
           <li class = "action-li">Step 4: sign <a href = "https://act.colorofchange.org/sign/Pass-VRAA/?sp_ref=660903488.176.209155.o.1.2&referring_akid=.8534579.MuPSTt&source=c2c" target = "blank" style = "color: white;">this petition</a> to urge the Senate to pass the John Lewis R. Voting Rights Act (it was passed by the House in 2019). 
-            Or better yet, call/email your senators!</li>
+            Or better yet, call/email your senators! Find their contact info <a href = "https://www.senate.gov/general/contact_information/senators_cfm.cfm" target = "blank" style = "color: white;">here</a>.</li>
           <li class = "action-li">Step 5: if you have the means, support organizations that are fighting to protect voting rights (see resources page for examples)</li>
         </ul>
       </div>
