🐔🌱 Checkpoint ./style.css:19034959/68 ./resources.html:19034959/430

--- a/resources.html
+++ b/resources.html
@@ -38,6 +38,7 @@
         </p>
         <ul>
           <li><a href = "https://www.aclu.org/issues/voting-rights" target = "blank">American Civil Liberties Union (ACLU)</a></li>
+          <li><a href = "https://www.brennancenter.org/" target = "blank">Brennan Center for Justice</a></li>
         </ul>
       </div>
       
@@ -46,6 +47,9 @@
         <p>
           Here are some articles about specific instances of voter suppression.
         </p>
+        <ul>
+          <li><a href = "https://www.nytimes.com/2013/06/26/us/supreme-court-ruling.html" target = "blank">"Supreme Court Invalidates Key Part of Voting Rights Act"</a>, <i>The New York Times</i></li>
+        </ul>
       </div>
       
       <div class = "videos">
