🏮🙌 Checkpoint ./resources.html:19034959/96 ./take-action.html:19034959/748 ./style.css:19034959/3

--- a/resources.html
+++ b/resources.html
@@ -40,7 +40,7 @@
           <li><a href = "https://www.aclu.org/issues/voting-rights" target = "blank">American Civil Liberties Union (ACLU)</a></li>
           <li><a href = "https://www.brennancenter.org/" target = "blank">Brennan Center for Justice</a></li>
           <li><a href = "https://www.vote.org/" target = "blank">Vote.org</a></li>
-          <li><a></a></li>
+          <li><a href = "https://fairfight.com/" target = "blank">Fair Fight</a></li>
         </ul>
       </div>
       
@@ -50,7 +50,7 @@
           Here are some articles related to voter suppression.
         </p>
         <ul>
-          <li><a href = "https://www.nytimes.com/2013/06/26/us/supreme-court-ruling.html" target = "blank">"Supreme Court Invalidates Key Part of Voting Rights Act"</a>, <i>The New York Times</i></li>
+          <li><a href = "https://www.nytimes.com/2013/06/26/us/supreme-court-ruling.html" target = "blank">"Supreme Court Invalidates Key Part of Voting Rights Act"</a>, <i>The New York Times</i> (Jun 2013)</li>
         </ul>
       </div>
       
