--- a/take-action.html
+++ b/take-action.html
@@ -76,9 +76,10 @@
           <li class = "action-li">Step 1: educate yourself about voter suppression across the US and in your state.</li>
           <li class = "action-li">Step 2: <a href = "https://vote.gov/" target = "blank" style = "color: white;">REGISTER TO VOTE!</a> (or help someone else do so)</li>
           <li class = "action-li">Step 3: read and share <a href = "https://www.aclu.org/know-your-rights/voting-rights/" target = "blank" style = "color: white;">this publication</a> from the ACLU to help people know their rights</li>
-          <li class = "action-li">Step 4: sign <a href = "https://act.colorofchange.org/sign/Pass-VRAA/?sp_ref=660903488.176.209155.o.1.2&referring_akid=.8534579.MuPSTt&source=c2c" target = "blank" style = "color: white;">this petition</a> to urge the Senate to pass the John Lewis R. Voting Rights Act (it was passed by the House in 2019). 
+          <li class = "action-li">Step 4: sign <a href = "https://secure.brennancenter.org/secure/protect-2020-election-covid-19?_ga=2.36741408.100519942.1596116233-1837606092.1594742384" target = "blank" style = "color: white;">this petition</a> to call on Congress to approve sufficient funds for safe and fair elections during the pandemic</li>                 
+          <li class = "action-li">Step 5: sign <a href = "https://act.colorofchange.org/sign/Pass-VRAA/?sp_ref=660903488.176.209155.o.1.2&referring_akid=.8534579.MuPSTt&source=c2c" target = "blank" style = "color: white;">this petition</a> to urge the Senate to pass the John Lewis R. Voting Rights Act (it was passed by the House in 2019). 
             Or better yet, call/email your senators! Find their contact info <a href = "https://www.senate.gov/general/contact_information/senators_cfm.cfm" target = "blank" style = "color: white;">here</a>.</li>
-          <li class = "action-li">Step 5: if you have the means, support organizations that are fighting to protect voting rights (see resources page for examples)</li>
+          <li class = "action-li">Step 6: if you have the means, support organizations that are fighting to protect voting rights (see <a href = "resources.html" style = "color: white;">resources page</a> for examples)</li>
         </ul>
       </div>
     </div>
