🍴🛤 Checkpoint ./style.css:19034959/1 ./resources.html:19034959/1069

--- a/resources.html
+++ b/resources.html
@@ -41,6 +41,7 @@
           <li><a href = "https://www.brennancenter.org/" target = "blank">Brennan Center for Justice</a></li>
           <li><a href = "https://www.vote.org/" target = "blank">Vote.org</a></li>
           <li><a href = "https://fairfight.com/" target = "blank">Fair Fight</a></li>
+          <li><a href = "https://colorofchange.org/about/" target = "blank">Color of Change</a></li>
         </ul>
       </div>
       
@@ -51,6 +52,10 @@
         </p>
         <ul>
           <li><a href = "https://www.nytimes.com/2013/06/26/us/supreme-court-ruling.html" target = "blank">"Supreme Court Invalidates Key Part of Voting Rights Act"</a>, <i>The New York Times</i> (Jun 2013)</li>
+          <li><a href = "https://www.nytimes.com/2020/07/18/us/supreme-court-voting-rights.html" target = "blank">"A More Liberal Supreme Court? Not When It Comes to Voting Rights"</a>, <i>The New York Times</i> (Jul 2020)</li>
+          <li><a href = "https://www.npr.org/2018/10/23/659784277/republican-voter-suppression-efforts-are-targeting-minorities-journalist-says" target = "blank">"Republican Voter Suppression Efforts Are Targeting Minorities, Journalist Says"</a>, <i>NPR</i> (Oct 2018)</li>
+          <li><a href = "https://www.nytimes.com/2020/02/13/us/politics/north-dakota-voter-id.html" target = "blank">"North Dakota Tribes Score Key Voting Rights Victory"</a>, <i>The New York Times</i> (Feb 2020)</li>
+          <li><a href = "https://www.nytimes.com/2019/12/27/us/elections/georgia-voters-purge.html" target = "blank">"Federal Judge Backs Georgia’s Purge of Nearly 100,000 Voters"</a>, <i>The New York Times</i> (Dec 2019)</li>
         </ul>
       </div>
       
