--- a/resources.html
+++ b/resources.html
@@ -48,7 +48,7 @@
       <div class = "articles">
         <h2>Articles</h2>
         <p>
-          Here are some articles related to voter suppression.
+          Here are some articles about voter suppression.
         </p>
         <ul>
           <li><a href = "https://www.nytimes.com/2013/06/26/us/supreme-court-ruling.html" target = "blank">"Supreme Court Invalidates Key Part of Voting Rights Act"</a>, <i>The New York Times</i> (Jun 2013)</li>
@@ -56,6 +56,7 @@
           <li><a href = "https://www.npr.org/2018/10/23/659784277/republican-voter-suppression-efforts-are-targeting-minorities-journalist-says" target = "blank">"Republican Voter Suppression Efforts Are Targeting Minorities, Journalist Says"</a>, <i>NPR</i> (Oct 2018)</li>
           <li><a href = "https://www.nytimes.com/2020/02/13/us/politics/north-dakota-voter-id.html" target = "blank">"North Dakota Tribes Score Key Voting Rights Victory"</a>, <i>The New York Times</i> (Feb 2020)</li>
           <li><a href = "https://www.nytimes.com/2019/12/27/us/elections/georgia-voters-purge.html" target = "blank">"Federal Judge Backs Georgia’s Purge of Nearly 100,000 Voters"</a>, <i>The New York Times</i> (Dec 2019)</li>
+          <li><a>"The Georgia Governor’s Race Has Brought Voter Suppression Into Full View"</a>, <i>The Atlantic</i> (</li>
         </ul>
       </div>
       
