🍶🌑 Checkpoint ./resources.html:19034959/87

--- a/resources.html
+++ b/resources.html
@@ -44,8 +44,8 @@
           <li><a href = "https://colorofchange.org/about/" target = "blank">Color of Change</a></li>
           <li><a href = "https://letamericavote.wpengine.com/" target = "blank">Let America Vote</a></li>
           <li><a href = "https://www.commoncause.org/" target = "blank">Common Cause</a></li>
-          <li><a href = "" target = "blank"></a></li>
-          <li><a href = "" target = "blank"></a></li>
+          <li><a href = "https://www.spreadthevote.org/" target = "blank">Spread the Vote</a></li>
+          <li><a href = "https://866ourvote.org/" target = "blank">Election Protection</a></li>
         </ul>
       </div>
       
