🚔🏍 Checkpoint ./index.html:19034959/496 ./resources.html:19034959/99 ./take-action.html:19034959/99 ./style.css:19034959/128

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="/script.js" defer></script>
 
     <!-- TODO: add fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
   </head>
   <body>
     <!-- navigation bar -->
@@ -86,6 +87,11 @@
         are often inconvenient to obtain for people living in rural areas. Minority voters disproportionately lack ID. Nationally, up to 
         25% of African-American citizens of voting age lack government-issued photo ID, compared to only 8% of whites. As in-person
         voter fraud is extremely rare, these laws serve no purpose other than targeting marginalized groups and reducing voter turnout. 
+        <br>
+      </p>
+      <p>
+        Voter registration restrictions like these laws are extremely common, and can also . They can include requiring documents to prove citizenship or identification
+        (like the photo ID laws), limiting the amount of time for voter registration, and more. 
       </p>
       <p class="attributions">
         Image taken from <a href="https://www.3newsnow.com/" target = "blank">this website</a>.
