--- a/resources.html
+++ b/resources.html
@@ -15,6 +15,7 @@
     <script src="/script.js" defer></script>
 
     <!-- TODO: add fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
   </head>
   <body>
     <!-- navigation bar -->
