--- a/take-action.html
+++ b/take-action.html
@@ -15,6 +15,7 @@
     <script src="/script.js" defer></script>
     
     <!-- TODO: Add any links to Google font families here -->
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
   </head>
 
   <body>
