💼🏖 Checkpoint ./index.html:19034959/398

--- a/index.html
+++ b/index.html
@@ -87,11 +87,8 @@
         are often inconvenient to obtain for people living in rural areas. Minority voters disproportionately lack ID. Nationally, up to 
         25% of African-American citizens of voting age lack government-issued photo ID, compared to only 8% of whites. As in-person
         voter fraud is extremely rare, these laws serve no purpose other than targeting marginalized groups and reducing voter turnout. 
-        <br>
-      </p>
-      <p>
-        Voter registration restrictions like these laws are extremely common, and can also . They can include requiring documents to prove citizenship or identification
-        (like the photo ID laws), limiting the amount of time for voter registration, and more. 
+        Voter registration restrictions like these laws are extremely common, and can also include laws that limit the amount of time for 
+        voter registration, among other restrictive measures. 
       </p>
       <p class="attributions">
         Image taken from <a href="https://www.3newsnow.com/" target = "blank">this website</a>.
@@ -132,8 +129,8 @@
       <p>
         I am a rising junior at the Brearley School in NYC, and am passionate about history, public health, and social justice. 
         I wanted to create this website to raise awareness about the perils of voter suppression, and to encourage people
-        to take action ahead of the 2020 election. I especially hope to reach people in my generation and inspire them to vote, 
-        to possibly increase turnout among this demographic. 
+        to take action ahead of the 2020 election. I also hope to reach people in my generation and inspire them to vote, 
+        as turnout among this demographic will be especially important in November. 
       </p>
       <p class="attributions">
         Image taken from <a href="https://www.narf.org/" target = "blank">this website</a>.
